2007-11-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5238]
	* locales/ug_CN: Fix typo in collating symbol definition.

	[BZ #5237]
	* locales/lo_LA: Fix typos in collation symbols.

2007-11-06  Ulrich Drepper  <drepper@redhat.com>

	* locales/dz_BT: Fix representation of data.

	* SUPPORTED (SUPPORTED-LOCALES): Add bo_CN and bo_IN.
	* locales/bo_CN: New file.
	* locales/bo_IN: New file.

2007-10-28  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5224]
	* locales/ig_NG: Add missing collating elements and symbols.

2007-10-14  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4098]
	* locales/pl_PL: Change abmon, abday, and d_fmt according to
	results of vote.

2007-10-10  Ulrich Drepper  <drepper@redhat.com>

	* locales/iso14651_t1_common: If DIACRIT_FORWARD is defined, define
	second level of <LATIN> script as forward.
	* locales/de_DE: Define DIACRIT_FORWARD.
	* de_DE.in: Revert last change.

2007-10-10  Jakub Jelinek  <jakub@redhat.com>

	* locales/en_US: Add first_weekday and first_workday.
	* locales/cs_CZ: Likewise.
	* locales/fur_IT: Likewise.
	* locales/fy_DE: Likewise.
	* locales/hu_HU: Likewise.
	* locales/i18n: Likewise.
	* locales/li_BE: Likewise.
	* locales/li_NL: Likewise.
	* locales/nds_DE: Likewise.
	* locales/nds_NL: Likewise.
	* locales/pl_PL: Likewise.
	* locales/sc_IT: Likewise.
	* locales/sk_SK: Likewise.

2007-10-09  Ulrich Drepper  <drepper@redhat.com>

	* locales/de_DE: Set first week day to Monday.
	* locales/fr_FR: Likewise.

2007-10-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #73]
	* locales/nb_NO: Update time information, collation, thousands
	separator.
	* locales/nn_NO: Likewise.

2007-10-04  Ulrich Drepper  <drepper@redhat.com>

	* locales/en_NG: New file.

2007-10-04  Jakub Jelinek  <jakub@redhat.com>

	* tst-langinfo.sh: Update expected THOUSEP for fr_FR.

2007-10-02  Ulrich Drepper  <drepper@redhat.com>

	* charmaps/UTF-8: Fix U06FF definition.  Remove double U074A
	definition.  Add U0B71 and U27C0 to U27CA definitions.
